# Crowd-Management-System-

./: .gitignore  MONGODB_COMMANDS.md  PROJECT_PRESENTATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  start.sh  start_with_mock.sh
backend/: database.py  main.py  mock_data.py  models.py  seed_data.py
backend/routes/: alerts.py  crowd_data.py  users.py  zones.py
frontend/: dashboard.html  index.html  users.html  zones.html
frontend/css/: style.css
frontend/js/: script.js
