[project]
name = "crowdguard"
version = "0.1.0"
description = "CrowdGuard - Intelligent Crowd Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
